Bug 1558117 Part 2: Check if other side is closed while state is AboutToWait. r=jrmuizel

If the other side crashed with AboutToWait set in CanvasEventRingBuffer then in
theory we could spin forever waiting for it to change.

Differential Revision: https://phabricator.services.mozilla.com/D61828

--HG--
extra : moz-landing-system : lando